# astroimtools

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.rst  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml  publish.yml
astroimtools/: __init__.py  arithmetic.py  conftest.py  core.py  cutout_tools.py  filtering.py  interpolation.py  lupton_rgb.py  nddata_adapters.py  statistics.py  stats.py  utils.py
astroimtools/scripts/: imarith.py  imstats.py
astroimtools/tests/: coveragerc  test_arithmetic.py  test_filtering.py  test_nddata_adapters.py  test_stats.py  test_utils.py
docs/: arithmetic.rst  conf.py  contributing.rst  cutouts.rst  filtering.rst  high-level_API.rst  idw.rst  index.rst  install.rst  license.rst  nddata_adapters.rst  rtd-pip-requirements  rtd-pip-requirements.txt  scripts.rst  stats.rst  utils.rst
docs/astroimtools/: arithmetic.rst  cutouts.rst  filtering.rst  install.rst  interpolation.rst  misc.rst  nddata_adapters.rst  scripts.rst  statistics.rst  stats.rst  utils.rst
docs/astroimtools/notebooks/: make_cutouts.ipynb  make_rgb.ipynb
docs/astroimtools/notebooks/data/: CANDELS_GDS_F160W_J033231.70-274626.2_hst_acs_f814w_cutout.fits  CANDELS_GDS_F160W_J033231.70-274626.2_hst_wfc3ir_f125w_cutout.fits  CANDELS_GDS_F160W_J033231.70-274626.2_hst_wfc3ir_f160w_cutout.fits  CANDELS_GDS_F160W_J033236.06-274559.1_hst_acs_f814w_cutout.fits  CANDELS_GDS_F160W_J033236.06-274559.1_hst_wfc3ir_f125w_cutout.fits  CANDELS_GDS_F160W_J033236.06-274559.1_hst_wfc3ir_f160w_cutout.fits  egs_13004304_acs_f606w_cutout.fits  egs_13004304_acs_f814w_cutout.fits  egs_13004304_wfc3_f160w_cutout.fits  image_rgb.fits
docs/imutils/: arithmetic.rst  filtering.rst  high-level_API.rst  install.rst  interpolation.rst
docs/notebooks/: make_cutouts.ipynb
docs/notebooks/data/: MOS_8458_G395H-cutouts.txt  egs_13004304_acs_f814w_cutout.fits  egs_13004304_wfc3_f160w_cutout.fits
imutils/: __init__.py  core.py  footprints.py  idw.py  nddata_adapters.py  stats.py  utils.py
imutils/scripts/: fitsinfo.py  imarith.py  imstats.py
licenses/: LICENSE.rst  README.rst
