[project]
name = 'astroimtools'
description = 'Astronomical Image Tools'
readme = 'README.rst'
license = {file = 'LICENSE.rst'}
authors = [
    {name = 'Astroimtools Developers', email = 'help@stsci.edu'},
]
keywords = [
    'astronomy',
    'astrophysics',
    'images',
    'cutouts',
    'statistics',
    'filtering',
]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dynamic = ['version']
requires-python = '>=3.9'
dependencies = [
    'numpy>=1.22',
    'astropy>=5.0',
    'scipy>=1.7.2',
]

[project.urls]
homepage = 'https://github.com/spacetelescope/astroimtools'
documentation = 'https://astroimtools.readthedocs.io/en/stable/'

[project.scripts]
imarith = "astroimtools.scripts.imarith:main"
imstats = "astroimtools.scripts.imstats:main"

[project.optional-dependencies]
all = [
    'matplotlib>=3.5',
    'photutils>=1.5',
    'reproject>=0.9',
]
test = [
    'pytest-astropy>=0.10',
]
docs = [
    'astroimtools[all]',
    'ipython',
    'nbsphinx',
    'sphinx',
    'sphinx-astropy>=1.6',
    'tomli; python_version < "3.11"',
]

[build-system]
requires = [
    'setuptools>=61.2',
    'setuptools_scm>=6.2',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = 'astroimtools/version.py'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
'astroimtools' = [
    'data/*',
]

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    'astroimtools',
    'docs',
]
norecursedirs = [
    'docs/_build',
    'extern',
]
astropy_header = true
doctest_plus = 'enabled'
text_file_format = 'rst'
addopts = '--color=yes --doctest-rst'
xfail_strict = true
remote_data_strict = true
filterwarnings = [
    'ignore:numpy.ufunc size changed:RuntimeWarning',
]

[tool.coverage.run]
omit = [
    'astroimtools/_astropy_init*',
    'astroimtools/conftest.py',
    'astroimtools/*setup_package*',
    'astroimtools/tests/*',
    'astroimtools/*/tests/*',
    'astroimtools/extern/*',
    'astroimtools/version*',
    '*/astroimtools/_astropy_init*',
    '*/astroimtools/conftest.py',
    '*/astroimtools/*setup_package*',
    '*/astroimtools/tests/*',
    '*/astroimtools/*/tests/*',
    '*/astroimtools/extern/*',
    '*/astroimtools/version*',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'except ImportError',
    'raise AssertionError',
    'raise NotImplementedError',
    'def main\\(.*\\):',
    'pragma: py{ignore_python_version}',
    'def _ipython_key_completions_',
]

[tool.build-sphinx]
github_project = 'spacetelescope/astroimtools'

[tool.isort]
skip_glob = [
    'astroimtools/*__init__.py*',
]
known_first_party = [
    'astroimtools',
    'extension_helpers',
]
use_parentheses = true

[tool.black]
force-exclude = """
(
  .*
)
"""
