[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = "docs[\/]_build"
doctest_plus = enabled
addopts = --pyargs -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astroimtools
description = Astronomical Image Tools
long_description = Astronomical Image Tools
author = STScI
author_email = support@stsci.edu
license = BSD
url = https://github.com/spacetelescope/astroimtools
edit_on_github = False
github_project = spacetelescope/astroimtools
install_requires = astropy
version = 0.2.dev

[entry_points]
imarith = astroimtools.scripts.imarith:main
imstats = astroimtools.scripts.imstats:main
