[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
testpaths = "astroimtools" "docs"
norecursedirs = "docs[\/]_build" "astroimtools[\/]extern"
doctest_plus = enabled
addopts = --pyargs -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astroimtools
description = Astronomical Image Tools
long_description = Astronomical Image Tools
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
url = https://github.com/spacetelescope/astroimtools
edit_on_github = False
github_project = spacetelescope/astroimtools
install_requires = astropy
version = 0.3.dev
# Note: these versions also need to be defined in the package __init__.py
minimum_python_version = 3.5
minimum_numpy_version = 1.13

[entry_points]
imarith = astroimtools.scripts.imarith:main
imstats = astroimtools.scripts.imstats:main
